--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "mongodb": "^2.2.30",
@@ -24,6 +25,7 @@
     "eslint-config-equimper": "^2.2.1",
     "faker": "^4.1.0",
     "mocha": "^3.4.2",
+    "mongoose-unique-validator": "^1.0.5",
     "nodemon": "^1.11.0"
   },
   "scripts": {
