--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^1.11.0"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "mocha"
   }
 }
