--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "nodemon": "^1.11.0"
   },
   "scripts": {
-    "start": "concurrently \"node app.js\" \"cd client && npm start\"",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "dev": "concurrently \"nodemon app.js\" \"cd client && npm start\"",
-    "test": "mocha"
+    "test": "mocha",
+    "client": "cd client && npm start",
+    "server": "node app.js"
   }
 }
