--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "chai": "^4.1.0",
     "chai-http": "^3.0.0",
     "concurrently": "^3.5.0",
+    "enzyme": "^2.9.1",
     "eslint-config-equimper": "^2.2.1",
+    "expect": "^1.20.2",
     "faker": "^4.1.0",
+    "jest": "^20.0.4",
     "mocha": "^3.4.2",
     "mongoose-unique-validator": "^1.0.5",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "react-test-renderer": "^15.6.1"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
