--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-toolbox": "^2.0.0-beta.12"
   },
   "devDependencies": {
     "enzyme": "^2.9.1",
