--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-toolbox": "^2.0.0-beta.12"
+    "react-toolbox": "^2.0.0-beta.12",
+    "semantic-ui-react": "^0.71.0"
   },
   "devDependencies": {
     "enzyme": "^2.9.1",
