--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "muicss": "^0.9.18",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1",
+    "react-router": "3.0.2",
     "react-scripts": "1.0.10"
   },
   "scripts": {
