--- a/client/package.json
+++ b/client/package.json
@@ -5,18 +5,13 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "react-router": "3.0.2",
     "react-scripts": "1.0.10",
-    "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "semantic-ui-react": "^0.71.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:8080/"
+  }
 }
