--- a/client/package.json
+++ b/client/package.json
@@ -17,5 +17,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "chai": "^4.1.0",
+    "enzyme": "^2.9.1",
+    "expect": "^1.20.2",
+    "mocha": "^3.4.2",
+    "react-test-renderer": "^15.6.1"
   }
 }
