--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-equimper": "^2.2.1",
     "expect": "^1.20.2",
     "faker": "^4.1.0",
+    "flow-bin": "^0.51.0",
     "mocha": "^3.4.2",
     "mongoose-unique-validator": "^1.0.5",
     "nodemon": "^1.11.0"
