--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "connect-flash": "^0.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.15.3",
+    "jwks-rsa": "^1.2.0",
     "mongodb": "^2.2.30",
-    "mongoose": "^4.11.1",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "mongoose": "^4.11.1"
   },
   "devDependencies": {
     "assert": "^1.4.1",
