--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
-    "connect-flash": "^0.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-jwt": "^5.3.0",
-    "express-session": "^1.15.3",
-    "jwks-rsa": "^1.2.0",
     "mongodb": "^2.2.30",
-    "mongoose": "^4.11.1"
+    "mongoose": "^4.11.1",
+    "passport": "^0.3.2",
+    "passport-google-oauth20": "^1.0.0"
   },
   "devDependencies": {
     "assert": "^1.4.1",
