--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "start": "concurrently \"node app.js\" \"cd client && npm start\"",
-    "dev": "concurrently \"nodemon app.js\" \"cd client && npm start\"",
+    "dev": "nodemon app.js",
     "test": "mocha",
     "client": "cd client && npm start",
     "server": "node app.js"
