--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "nodemon": "^1.11.0"
   },
   "scripts": {
-    "start": "concurrently \"node app.js\" \"cd client && npm start\"",
+    "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "mocha",
     "client": "cd client && npm start",
