--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   },
   "scripts": {
     "start": "node app.js",
-    "dev": "concurrently \"nodemon app.js\" \"cd client && npm start\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "mocha",
-    "client": "cd client && npm start",
-    "server": "node app.js"
+    "client": "npm run start --prefix client",
+    "server": "nodemon app.js"
   }
 }
