--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "mongodb": "^2.2.30",
     "mongoose": "^4.11.1",
     "passport": "^0.3.2",
-    "passport-google-oauth20": "^1.0.0",
-    "semantic-ui-react": "^0.71.3"
+    "passport-google-oauth20": "^1.0.0"
   },
   "devDependencies": {
     "assert": "^1.4.1",
