--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,13 @@
   "proxy": {
     "/auth/google": {
       "target": "http://localhost:8080"
+    },
+    "/*": {
+      "target": "http://localhost:8080"
     }
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
