--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-mdl": "^1.10.3",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "semantic-ui-react": "^0.71.3"
   },
   "scripts": {
     "start": "react-scripts start",
