--- a/client/package.json
+++ b/client/package.json
@@ -27,5 +27,9 @@
       "target": "http://localhost:8080"
     }
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "enzyme": "^2.9.1",
+    "react-test-renderer": "^15.6.1",
+    "sinon": "^3.2.0"
+  }
 }
