--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "mocha",
     "client": "npm run start --prefix client",
-    "server": "nodemon app.js"
+    "server": "nodemon app.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   }
 }
